Changes with melon 1.5.1                                          17 May 2016
    *) Normalized many functions' name.
    *) Fixed a bug of timestamp in log.

Changes with melon 1.5.0                                          14 May 2016
    *) Added two interfaces for HTTP.
    *) Added websocket.

Changes with melon 1.4.3                                          02 May 2016
    *) Added an interface of hash table.

Changes with melon 1.4.2                                          25 Apr 2016
    *) Optimized calculation of Big Number.
    *) Fixed some bugs of Big Number and HTTP.

Changes with melon 1.4.1                                          20 Apr 2016
    *) Optimized division of Big Number.
    *) Fixed some bugs of Big Number.

Changes with melon 1.4.0                                          09 Apr 2016
    *) Added Big Number.
    *) Added MD5.
    *) Added SHA1.
    *) Added DES and 3DES.
    *) Added RC4.
    *) Added AES.
    *) Added Base64.
    *) Added RSA.

Changes with melon 1.3.6                                          14 Dec 2015
    *) Supported json (not rely on any libraries).
    *) Reconstructed HTTP component.
    *) Optimized Hash component and added some new functions.
    *) Fixed a bug of file cache.

Changes with melon 1.3.5                                          22 Nov 2015
    *) Supported regular expression (not rely on PCRE).

Changes with melon 1.3.4                                          11 Nov 2015
    *) Removed some interfaces of connections.
    *) Added some new interface for connections.
    *) Fixed a bug of inter-thread communication.
    *) Optimized inter-process communication.
    *) Optimized inter-thread communication.

Changes with melon 1.3.3                                          06 Nov 2015
    *) Fixed some bugs of parsing HTTP protocol.
    *) Added an interface for HTTP protocol.
    *) Added an interface for TCP connection.
