@@ -1,3 +1,6 @@
+Changes with melon 1.5.2                                          20 May 2016
+    *) Added SHA256.
+
 Changes with melon 1.5.1                                          17 May 2016
     *) Normalized many functions' name.
     *) Fixed a bug of timestamp in log.
